--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
