--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.4.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "cross-env": "^7.0.3",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
